
=== (next) ===
CHANGED: to accept null values for default "null" params
CHANGED: changed to allow type definition shortcut as per FTN3 v1.4
NEW: FTN3 v1.4 support

=== 1.5.8 (2017-07-09) ===
FIXED: re-publish with proper npm packaging

=== 0.8.4 (2017-07-09) ===
CHANGED: to use FutoIn CID tool for development
NEW: Revised development tools