@@ -2,6 +2,7 @@
 === (next) ===
 CHANGED: to accept null values for default "null" params
 CHANGED: changed to allow type definition shortcut as per FTN3 v1.4
+CHANGED: imports handling to workaround diamond problem as per FTN3: v1.4
 NEW: FTN3 v1.4 support
 
 === 1.5.8 (2017-07-09) ===
